# NetCommunication

./: README.md
CommNet/: CMakeLists.txt
CommNet/File/: chinese_ver_links  chinese_ver_nodes  delete_nodes  english_ver_links  english_ver_nodes
CommNet/class/: node.cpp  node.h
CommNet/include/: commNet.h
CommNet/src/: aveLen.cpp  dijkstra.cpp  main.cpp  netOperate.cpp
